# shell-scriptman

./: Cargo.toml  LICENSE  README.md  setup.sh
.cmd/: index.json
.cmd/commands/: test.sh
src/: main.rs
