[package]
name = "shell-scriptman"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vaclavblazej/shell-scriptman"
description = "Manage custom scripts from a central location"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.0", features = ["cargo", "string"] }
serde_json = "1.0.96"
serde = "1.0.163"
serde_derive = "1.0.163"
